--- a/ReCaptcha/Site.Master
+++ b/ReCaptcha/Site.Master
@@ -12,9 +12,9 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
+    <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
 <body>
     <form runat="server">
